# change-detection-for-metaverse

./: .commitlintrc.cjs  .cspell.jsonc  .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  change-detection-for-metaverse.code-workspace  changelog.config.cjs  compose.yaml  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWENERS  pull_request_template.md
config/: example.yaml
config/change_detection/: example.yaml
config/dataset/: example.yaml
config/hydra/job_logging/: custom.yaml
config/hydra/run/: custom.yaml
config/object_detection/: example.yaml
config/refinement/: example.yaml
cspell/: python.jsonc
src/mcd/: __init__.py  log.py  reconstruct.py  run.py  video.py
src/mcd/change_detection/: README.md  __init__.py  detector.py  exceptions.py  label.py  result.py
src/mcd/conf/: __init__.py  _utils.py  change_detection.py  conf.py  dataset.py  object_detection.py  refinement.py
src/mcd/dtypes/: __init__.py  _array.py  _camera.py  _image.py  _space.py
src/mcd/loader/: __init__.py  arkit.py  arkit_ue5.py  base.py  yolo.py
src/mcd/object_detection/: README.md  __init__.py  base.py  yolo.py
src/mcd/refine/: README.md  __init__.py  refiner.py  result.py  schema.py
src/mcd/utils/: arkit.py
tests/: __init__.py
tests/change_detection/: __init__.py  test_detector.py  test_exceptions.py  test_label.py  test_result.py
tests/dtypes/: __init__.py  test_array.py  test_image.py
tests/loader/: __init__.py  test_base.py  test_yolo.py
tests/refine/: __init__.py  test_result.py  test_schema.py
tests/test_data/dataset1/image_123/labels/: image_123.txt
tests/test_data/datasets/after/image_0/labels/: image_0.txt
(+1 files in other folders)
