[project]
name = "mcd"
version = "0.1.0"
description = "3D Change Detection for Metaverse"
readme = "README.md"
authors = [{ name = "Tomoya Matsubara" }]
requires-python = ">=3.12"
dependencies = [
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "numpy<2.2.0",
    "open3d>=0.19.0",
    "polars>=1.25.2",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "ultralytics>=8.3.23",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "pytest-cov>=6.0.0", "ruff>=0.11.0"]

[project.scripts]
mcd = "mcd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# MARK: Ruff

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line,
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation,
    "PYI021", # docstring-in-stub
    "RUF002", # ambiguous-unicode-character-docstring
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"**/test_*.py" = [
    "S101",   # assert
    "SLF001", # private-member-access
]

# MARK: Mypy

[tool.mypy]
ignore_missing_imports = true
strict = true
disallow_untyped_calls = true
python_version = "3.13"


# MARK: Pytest

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]

[tool.coverage.run]
omit = ["tests/*", "*/*_test.py", "*/test_*.py", "*/conftest.py"]
